[package]
name = "even_bigger_s"
version = "1.0.0"
authors = ["Zijian Zang <2639980868@qq.com>"]
description = "Better String Literal"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
